# django-wangeditor

./: .gitignore  LICENSE  MANIFEST.in  README.md  README.rst  setup.cfg  setup.py
.github/: FUNDING.yml
docs/: README.md
wangeditor/: __init__.py  configs.py  fields.py  urls.py  utils.py  views.py  widgets.py
wangeditor/backends/: __init__.py  dummy_backend.py
wangeditor/static/wangeditor/: wangeditor-init.js
wangeditor/templates/wangeditor/: widget.html
