[metadata]
name = django-wangeditor
version = attr: wangeditor.__version__
description = A Django app to use wangeditor.
long_description = file: README.rst
url = https://github.com/pangxiaobin/django-wangeditor
author = Hubery
author_email = panglaibin2013@163.com
license = BSD-3-Clause
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
install_requires = django-js-asset>=1.2.2
zip_safe = false

[pep8]
max_line_length =  120

[flake8]
exclude = build,.git,docs
max-line-length = 120
statistics = true
count = true
show-source = true

[isort]
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = true
known_first_party = django
line_length = 79
multi_line_output = 5